# project_hierophancy-code

./: Justfile  pyproject.toml
docs/.rules/: adaptation-techniques.mdc  code-header.mdc  code-style-analyst.mdc  consistency-best-practices.mdc  directory-naming-conventions.mdc  directory-structure-tracking.mdc  error-handling-patterns.mdc  file-analysis-hints.mdc  testing-guidelines.mdc
docs/references/: file_structure.md
docs/roadmap/mvp/phase2/: 01-overview-geometry-phase2.md  02-matrix-laplacians-and-operators.md  03-graph-geodesics-and-isomap.md  04-diffusion-maps-and-laplacian-eigenmaps.md  05-flatnet-manifold-flattening-and-reconstruction.md  06-glue-and-manifold-capacity-metrics.md  07-riemannian-metric-estimation-and-local-charts.md  08-curvature-forman-ollivier-and-ricci-flow.md  09-topological-data-analysis-persistent-homology.md  10-evaluation-metrics-and-benchmarks-manifold.md  11-ports-and-types-appendix.md  12-visualization-hooks-manifold.md
docs/roadmap/mvp/phase3/: 01-phase3-overview-math-dl.md  02-differentiable-objectives-and-soft-partitions.md  03-torchkernel-and-jax-backends.md  04-gnn-suite-message-passing.md  05-hyperbolic-and-riemannian-models.md  06-graph-generative-models.md  07-contrastive-and-ssl-on-graphs.md  08-topological-regularizers.md  09-theory-checks-and-proofs-roadmap.md  10-experiments-and-benchmarks-pipeline.md  11-production-apis-and-registry.md  (+1 more)
notebooks/: demo.ipynb  phase_1-3-demo.ipynb
scripts/: print_tree.py
src/lib/port/: graph.py  layout.py  objective.py  visualizer.py
src/notebooks/: demo.ipynb
(+34 files in other folders)
